[project]
name = "common"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladyslav Kotliar",email = "kotliarvladyslav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
poetry-plugin-shell = "1.0.1"
